; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-circular-queue.c_ff_circular_queue_advance_read.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-circular-queue.c_ff_circular_queue_advance_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_circular_queue = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_circular_queue_advance_read(%struct.ff_circular_queue* %0) #0 {
  %2 = alloca %struct.ff_circular_queue*, align 8
  store %struct.ff_circular_queue* %0, %struct.ff_circular_queue** %2, align 8
  %3 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %4 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, 1
  %7 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %8 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = srem i32 %6, %9
  %11 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %12 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %14 = call i32 @queue_lock(%struct.ff_circular_queue* %13)
  %15 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %16 = getelementptr inbounds %struct.ff_circular_queue, %struct.ff_circular_queue* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* %16, align 4
  %19 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %20 = call i32 @queue_signal(%struct.ff_circular_queue* %19)
  %21 = load %struct.ff_circular_queue*, %struct.ff_circular_queue** %2, align 8
  %22 = call i32 @queue_unlock(%struct.ff_circular_queue* %21)
  ret void
}

declare dso_local i32 @queue_lock(%struct.ff_circular_queue*) #1

declare dso_local i32 @queue_signal(%struct.ff_circular_queue*) #1

declare dso_local i32 @queue_unlock(%struct.ff_circular_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
